--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@googlemaps/js-api-loader": "^1.12.3",
     "@material-ui/core": "^5.0.0-beta.5",
     "@react-google-maps/api": "^2.4.0",
